typescript/checker/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            50,
        ),
        hi: BytePos(
            57,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts:4:5
  |
4 | var BOOLEAN: boolean;
  |     ^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            72,
        ),
        hi: BytePos(
            78,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts:5:5
  |
5 | var NUMBER: number;
  |     ^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            92,
        ),
        hi: BytePos(
            98,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts:6:5
  |
6 | var STRING: string;
  |     ^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            112,
        ),
        hi: BytePos(
            118,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts:7:5
  |
7 | var OBJECT: Object;
  |     ^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts:21:23
   |
21 | var resultIsObject1 = (ANY, OBJECT);
   |                       ^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts:22:23
   |
22 | var resultIsObject2 = (BOOLEAN, OBJECT);
   |                       ^^^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts:23:23
   |
23 | var resultIsObject3 = (NUMBER, OBJECT);
   |                       ^^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts:24:23
   |
24 | var resultIsObject4 = (STRING, OBJECT);
   |                       ^^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts:25:23
   |
25 | var resultIsObject5 = (OBJECT, OBJECT);
   |                       ^^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts:35:23
   |
35 | var resultIsObject6 = (null, OBJECT);
   |                       ^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Object)
File: $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts:36:23
   |
36 | var resultIsObject7 = (ANY = null, OBJECT);
   |                       ^^^^^^^^^^^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            842,
        ),
        hi: BytePos(
            846,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts:39:39
   |
39 | var resultIsObject10 = ("string", new Date());
   |                                       ^^^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            901,
        ),
        hi: BytePos(
            906,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandObjectType.ts:40:51
   |
40 | var resultIsObject11 = (STRING.toLowerCase(), new CLASS());
   |                                                   ^^^^^

